Fixed My Services and Services page overflow
Added a footer to both add services pages, and fixed issue where buttons were overflowing.

--- a/clientside/src/scss/main.scss
+++ b/clientside/src/scss/main.scss
@@ -88,7 +88,7 @@
 	 
 	 .layout__scroll {
 		 > div {
-			 max-width: calc(100vw - 32px);
+			 max-width: calc(100vw - 200px);
 		}
 	 }
 	 .layout__paragraph{
